; ModuleID = '/home/carl/AnghaBench/linux/net/sched/extr_sch_ingress.c_clsact_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/net/sched/extr_sch_ingress.c_clsact_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Qdisc = type { i32 }
%struct.clsact_sched_data = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Qdisc*)* @clsact_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clsact_destroy(%struct.Qdisc* %0) #0 {
  %2 = alloca %struct.Qdisc*, align 8
  %3 = alloca %struct.clsact_sched_data*, align 8
  store %struct.Qdisc* %0, %struct.Qdisc** %2, align 8
  %4 = load %struct.Qdisc*, %struct.Qdisc** %2, align 8
  %5 = call %struct.clsact_sched_data* @qdisc_priv(%struct.Qdisc* %4)
  store %struct.clsact_sched_data* %5, %struct.clsact_sched_data** %3, align 8
  %6 = load %struct.clsact_sched_data*, %struct.clsact_sched_data** %3, align 8
  %7 = getelementptr inbounds %struct.clsact_sched_data, %struct.clsact_sched_data* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.Qdisc*, %struct.Qdisc** %2, align 8
  %10 = load %struct.clsact_sched_data*, %struct.clsact_sched_data** %3, align 8
  %11 = getelementptr inbounds %struct.clsact_sched_data, %struct.clsact_sched_data* %10, i32 0, i32 2
  %12 = call i32 @tcf_block_put_ext(i32 %8, %struct.Qdisc* %9, i32* %11)
  %13 = load %struct.clsact_sched_data*, %struct.clsact_sched_data** %3, align 8
  %14 = getelementptr inbounds %struct.clsact_sched_data, %struct.clsact_sched_data* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.Qdisc*, %struct.Qdisc** %2, align 8
  %17 = load %struct.clsact_sched_data*, %struct.clsact_sched_data** %3, align 8
  %18 = getelementptr inbounds %struct.clsact_sched_data, %struct.clsact_sched_data* %17, i32 0, i32 0
  %19 = call i32 @tcf_block_put_ext(i32 %15, %struct.Qdisc* %16, i32* %18)
  %20 = call i32 (...) @net_dec_ingress_queue()
  %21 = call i32 (...) @net_dec_egress_queue()
  ret void
}

declare dso_local %struct.clsact_sched_data* @qdisc_priv(%struct.Qdisc*) #1

declare dso_local i32 @tcf_block_put_ext(i32, %struct.Qdisc*, i32*) #1

declare dso_local i32 @net_dec_ingress_queue(...) #1

declare dso_local i32 @net_dec_egress_queue(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
